--- a/assets/404.html
+++ b/assets/404.html
@@ -19,15 +19,15 @@ dynamic_title: true
     <a href="{{ '/' | relative_url }}">{{ site.data.locales[lang].not_found.head_back }}</a>
   {%- endcapture -%}
 
-  {%- capture _archives_page -%}
-    <a href="{{ 'archives' | relative_url }}">{{ site.data.locales[lang].not_found.archives_page }}</a>
+  {%- capture _posts_page -%}
+    <a href="{{ 'posts' | relative_url }}">{{ site.data.locales[lang].not_found.posts_page }}</a>
   {%- endcapture -%}
 
   <p>{{site.data.locales[lang].not_found.statment }}</p>
 
   <p>{{ site.data.locales[lang].not_found.hint_template
     | replace: ':HEAD_BAK', _head_back
-    | replace: ':ARCHIVES_PAGE', _archives_page }}
+    | replace: ':posts_PAGE', _posts_page }}
   </p>
 
 </div>
